src/styles/global.css
/* ... */
.about-text {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  max-width: 60ch;
}

#about img {
  width: 300px;
  aspect-ratio: 3/4;
  object-fit: cover;
  border: 5px solid white;
  border-radius: 10px;
  box-shadow: var(--card-shadow);
}

#projects {
  min-height: 100dvh;
  padding: var(--section-padding);
  display: grid;
  justify-content: center;
}

.projects-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: min-content;
  max-width: 1600px;
  padding: 2rem;
  column-gap: min(5%, 10rem);
  row-gap: 4rem;
}

.projects-intro-container {
  grid-column: 1 / span 3;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2rem;
  gap: 1.5rem;
}

#projects .card {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: min-content;
  gap: 0.5rem;
}

#projects .card .styled-border, #projects .card .project-description {
  grid-column: 1 / span 2;
}

#projects .styled-border {
  position: relative;
  aspect-ratio: 16/9;
  border-radius: 5px;
  padding: 1px;
  margin-bottom: 1.5rem;
  background: radial-gradient(ellipse 40% 50% at top center, hsl(var(--card-border-highlight)), hsl(var(--card-border)));
  box-shadow: var(--card-shadow);
}

.styled-border .screenshot {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: hsl(var(--card-border));
}

.styled-border .more-info {
  position: absolute;
  inset: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
}

.project-title {
  align-self: end;
}

.project-links {
  display: flex;
  gap: 0.6rem;
  justify-content: end;
}

.project-links a {
  color: hsl(var(--text));
}

.project-links svg {
  width: 2rem;
  aspect-ratio: 1;
}

#skills {
  margin-top: 8rem;
  min-height: 100dvh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2rem;
  gap: 3rem;
}

.skills-intro-container {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  align-items: center;
}

.skills-list {
  display: flex;
  max-width: 900px;
  flex-wrap: wrap;
  gap: 3rem;
  padding: 4rem;
  justify-content: center;
}

.skill-icon {
  width: 4rem;
  aspect-ratio: 1;
}

.skill-icon svg {
  width: 100%;
  aspect-ratio: 1;
  filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.25))
          drop-shadow(0 2px 2px rgba(0, 0, 0, 0.25))
          drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25))
          drop-shadow(0 8px 8px rgba(0, 0, 0, 0.25))
          drop-shadow(0 16px 16px rgba(0, 0, 0, 0.25));
}

footer {
  min-height: 100dvh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: var(--section-padding);
}

#contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
  gap: 1rem;
}

#contact .details {
  padding: 1rem;
  font-size: 1.2rem;
  display: flex;
  align-items: center;
}

.details > div {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}


.details svg {
  width: 2rem;
  aspect-ratio: 1;
}

.send-a-message {
  text-decoration: none;
  padding: 1rem;
  border: 1px solid hsl(var(--primary));
  border-radius: 5px;
  color: hsl(var(--primary));
  font-size: 1.2rem;
  display: flex;
  gap: 1rem;
  align-items: center;
  box-shadow: 0 2px 2px hsla(var(--primary), .30),
              0 4px 4px hsla(var(--primary), .15),
              0 8px 8px hsla(var(--primary), .05)
              ;
}

.send-a-message svg {
  width: 2rem;
}

.socials-and-credits {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

footer .social-media-links {
  position: initial;
  flex-direction: row;
}

.credit {
  text-align: center;
}

@media screen and (max-width: 1200px) {
  nav {
    width: 85%;
  }
}

@media screen and (max-width: 1024px) {
  .section-description {
    max-width: 50ch;
  }

  nav {
    width: 100%;
  }

  nav ul {
    gap: 2rem;
  }
  
  .hero-content {
    gap: 4rem;
  }

  .intro-container {
    flex: 1;
  }
  
  .name {
    font-size: 2.5rem;
  }

  .job-title {
    font-size: 2rem;
  }

  .description {
    font-size: 1rem;
  }

  .social-media-links {
    gap: 2rem;
  }

  .socials-link svg {
    width: 2rem;
  }

  #about {
    flex-direction: column-reverse;
    gap: 5rem;
  }

  .projects-grid {
    grid-template-columns: 1fr 1fr;
  }

  .projects-intro-container {
    grid-column: 1;

    padding: 0;
    align-items: start;
    justify-content: center;
  }

  .projects-intro-container .section-description {
    text-align: left;
  }
}

@media screen and (max-width: 760px) {
  :root {
    --section-padding: 1rem;
  }

  .section-heading {
    font-size: 2rem;
  }

  .section-description {
    font-size: 1rem;
  }
  
  header {
    display: none;
  }

  #hero {
    padding: 2rem;
  }

  .hero-content {
    flex-direction: column;
    gap: 2rem;
  }

  #hero-img {
    width: 60%;
  }
  
  .intro-container {
    width: 100%;
    align-items: center;
    gap: 0.5rem;
  }

  .intro-container * {
    text-align: center;
  }
  
  .greeting {
    font-size: 1rem;
  }

  .mailto-link, .social-media-links {
    display: none;
  }

  .name {
    font-size: 2rem;
  }

  .job-title {
    font-size: 1.5rem;
  }

  .scroll-down-icon {
    left: var(--section-padding);
    transform: none;
  }

  #about {
    gap: 2rem;
  }

  #about .section-heading {
    text-align: center;
  }

  .projects-grid {
    padding: 0;
    display: grid;
    grid-template-columns: 1fr;
  }

  .project-links {
    gap: 1.5rem;
  }

  #skills {
    gap: 5rem;
  }

  .skills-list {
    padding: 0;
  }

  .details {
    flex-direction: column;
    gap:0.5rem;
  }

  .details * {
    font-size: 1rem;
  }

  .divider {
    display: none;
  }

  #contact {
    gap: 2rem;
  }
}

@media screen and (max-width: 400px) {
  .description {
    display: none;
  }
}

